--- a/01-vars.yml
+++ b/01-vars.yml
@@ -1,10 +1,12 @@
--name: Demo on Variables
-hosts: localhost
-vars:
-  url: Dakati.com
-tasks:
-  -name: printing the variable url
-  msg: "{{url}}"
+- name: demo on variables
+  hosts: localhost
+  vars:
+    url: Dakati.com
+  tasks:
+    - name: printing url variable( declaring variable on play level)
+      ansible.builtin.debug:
+        msg: "{{url}}"
+
 
 
 
