--- a/01-vars.yml
+++ b/01-vars.yml
@@ -11,14 +11,15 @@
   tasks:
     - name: printing url1 variable but task level
       ansible.builtin.debug:
-        msg: "{{url1}}"
       vars:
-        url1: dakati.com
+        url1: Dakati.com
+        msg: "{{url1}}"
     - name: printing url2 variable task level
       ansible.builtin.debug:
-        msg: "{{url2}}"
       vars:
-        url2: www.dakati.com
+        url2: Dakati.com
+        msg: "{{url2}}"
+
 
 
 
