--- a/01-vars.yml
+++ b/01-vars.yml
@@ -6,19 +6,16 @@
     - name: printing url variable( declaring variable on play level)
       ansible.builtin.debug:
         msg: "{{url}}"
-- name: demo on variables but declaring now on task level
+- name: demo on variables but at task level
   hosts: localhost
   tasks:
-    - name: printing url1 variable but task level
+    - name: printing url1 variable at task level
+      ansible.builtin.debug:
+        msg: "{{url1}}"
       vars:
         url1: Dakati.com
-        msg: "{{url1}}"
-      ansible.builtin.debug:
-    - name: printing url2 variable task level
-      vars:
-        url2: Dakati.com
-        msg: "{{url2}}"
-      ansible.builtin.debug:
+
+
 
 
 
