--- a/01-vars.yml
+++ b/01-vars.yml
@@ -11,9 +11,14 @@
   tasks:
     - name: printing url1 variable at task level
       ansible.builtin.debug:
+        msg: "{{ url1 }}"
       vars:
         url1: Dakati.com
-        msg: "{{ url1 }}"
+    - name: printing ur2 variable at task level
+      ansible.builtin.debug:
+        msg: "{{ url2 }}"
+      vars:
+        url2: Dakati.com
 
 
 
