--- a/01-vars.yml
+++ b/01-vars.yml
@@ -6,6 +6,8 @@
     - name: printing url variable( declaring variable on play level)
       ansible.builtin.debug:
         msg: "{{ url }}"
+      vars:
+        url: Bharath.com
 - name: demo on variables but at task level
   hosts: localhost
   vars:
