adding yml file in to git

--- a/01-vars.yml
+++ b/01-vars.yml
@@ -28,10 +28,10 @@
 - name: Register variable
   hosts: localhost
   tasks:
-    - name: getting uptime of system
+    - name: getting uptime of server and storing output in to out variable
       ansible.builtin.shell: uptime
-      Register: out
-    - name: storing out variable
+      register: out
+    - name: printing out variable
       ansible.builtin.debug:
         msg: "{{out}}"
 
