--- a/01-vars.yml
+++ b/01-vars.yml
@@ -29,7 +29,7 @@
   hosts: localhost
   tasks:
     - name: getting uptime of server and storing output in to out variable
-      ansible.builtin.shell: uptime
+      ansible.builtin.shell: UpTime
       register: out
     - name: printing out variable
       ansible.builtin.debug:
