--- a/Roles/bharath/tasks/main.yml
+++ b/Roles/bharath/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: Demo on Roles
+- name: printing hello statement
   hosts: localhost
-  roles:
-    ansible.builtin.debug:
-    msg: "{{I am from Roles}}"
+  ansible.builtin.debug:
+    msg: Hello iam from Roles of bharath written in main.yml
+
