adding yml file in to git

--- a/roles/bharath/tasks/main.yml
+++ b/roles/bharath/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: printing hello statement
-  hosts: localhost
+  #hosts: localhost
   roles:
     ansible.builtin.debug:
       msg: Hello iam from Roles of bharath written in main.yml
