--- a/roles/bharath/tasks/main.yml
+++ b/roles/bharath/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: printing hello statement
-  #hosts: localhost
-  roles:
-    ansible.builtin.debug:
-      msg: Hello iam from Roles of bharath written in main.yml
+  hosts: localhost
+  #roles:
+  ansible.builtin.debug:
+    msg: Hello iam from Roles of bharath written in main.yml
 
