adding yml file in to git

--- a/04-loops.yml
+++ b/04-loops.yml
@@ -5,7 +5,7 @@
       ansible.builtin.debug:
         msg: fruit is {{ item }}
       loop:
-        apple
-        kiwi
-        banana
-        orange
+        - apple
+        - kiwi
+        - banana
+        - orange
