adding yml file in to git

--- a/04-loops.yml
+++ b/04-loops.yml
@@ -21,8 +21,8 @@
     - name: printing loop
       ansible.builtin.debug:
         msg: fruit is {{ item }}
-      loop:
-          "{{fruits}}"
+      loop: "{{fruits}}"
+
 
 
 
