--- a/04-loops.yml
+++ b/04-loops.yml
@@ -36,9 +36,9 @@
       ansible.builtin.debug:
         msg: fruit is {{ item.name }} , {{ item.quantity}}
       loop:
-        {name: apple , quantity: 100}
-        {name: banana , quantity: 200}
-        {name: kiwi, quantity: 300}
+        - {name: apple , quantity: 100}
+        - {name: banana , quantity: 200}
+        - {name: kiwi, quantity: 300}
 
 
 
